# Python38-Kivy-2.0.0rc3-1

./: hell.json  main.py  my.kv  pyproject.toml
